# password-helper-app

./: .gitignore  LICENSE  README.md
frontend/: README.md  package-lock.json  package.json
frontend/src/Pages/: Home.vue  NotFound.vue
frontend/src/components/: Loading.vue
frontend/src/router/: index.js
pwd-helper-backend/: pyproject.toml
